# wmbattery

./: INSTALL  Makefile  README  TODO  acpi.c  acpi.h  bigfont.xpm  config.h.in  configure.in  dial_bright.xpm  dial_dim.xpm  face.xpm  mask.xbm  simplehal.c  sonypi.c  sonypi.h  sys_power.c  sys_power.h  upower.c  wmbattery.1x  wmbattery.c  wmbattery.h
autoconf/: makeinfo.in
debian/: changelog  control  copyright  menu  rules
